[gd_scene load_steps=6 format=3 uid="uid://b86hvjb5cetnc"]

[ext_resource type="Script" path="res://scenes/player.gd" id="1_0cs7s"]

[sub_resource type="Environment" id="Environment_jyqc6"]
background_mode = 1
ambient_light_color = Color(0.262745, 0.176471, 0.427451, 1)
fog_enabled = true

[sub_resource type="Animation" id="Animation_73lxe"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera3D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 1, 0.5)]
}

[sub_resource type="Animation" id="Animation_ex0l8"]
resource_name = "Step"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera3D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.25, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 1, 0.5), Vector3(0.02, 1.02, 0.5), Vector3(0, 1, 0.5), Vector3(-0.02, 1.02, 0.5), Vector3(0, 1, 0.5)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2pahi"]
_data = {
"RESET": SubResource("Animation_73lxe"),
"Step": SubResource("Animation_ex0l8")
}

[node name="Player" type="Node3D"]
script = ExtResource("1_0cs7s")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0.5)
environment = SubResource("Environment_jyqc6")

[node name="OmniLight3D" type="OmniLight3D" parent="."]
shadow_enabled = true
omni_range = 7.66
omni_attenuation = 1.56

[node name="RayForward" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
target_position = Vector3(0, 0, -2)
collision_mask = 4
collide_with_areas = true
debug_shape_custom_color = Color(0.886275, 0, 0, 1)

[node name="RayBack" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
target_position = Vector3(0, 0, 2)
collision_mask = 4
collide_with_areas = true

[node name="RayRight" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
target_position = Vector3(2, 0, 0)
collision_mask = 4
collide_with_areas = true

[node name="RayLeft" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
target_position = Vector3(-2, 0, 0)
collision_mask = 4
collide_with_areas = true

[node name="SpotLight3D" type="SpotLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
light_energy = 2.0
spot_angle = 58.71

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_2pahi")
}

[node name="Timer" type="Timer" parent="."]
process_callback = 0
wait_time = 0.05
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
